--- a/index.html
+++ b/index.html
@@ -57,16 +57,82 @@
   </div>
   <script>
     const PHOTOS = [
-      { src: "photos/rec room before.jpg", caption: "Remove wall paneling and remodel existing living space with accent wall and new opening in rear wall", tag: "Kitchen" },
-      { src: "photos/bathroom1.jpg", caption: "Modern bathroom renovation—large-format tile and frameless glass enclosure.", tag: "Bathroom" },
-      { src: "photos/deck1.jpg", caption: "Custom composite deck with aluminum railing—low maintenance and durable.", tag: "Exterior" },
-      { src: "photos/framing1.jpg", caption: "Open-concept framing with LVL beam installation for structural support.", tag: "Framing" },
-      { src: "photos/electrical1.jpg", caption: "Electrical service upgrade, recessed LED lighting, and smart dimmers.", tag: "Electrical" },
-      { src: "photos/windows1.jpg", caption: "New energy-efficient windows with modern lap siding for curb appeal.", tag: "Windows" },
-      { src: "photos/millwork1.jpg", caption: "Custom millwork: built-in media wall with wire management and TV mount.", tag: "Millwork" },
-      { src: "photos/concrete1.jpg", caption: "Stamped concrete patio with protective seal and contrasting border.", tag: "Concrete" },
-      { src: "photos/laundry1.jpg", caption: "Garage conversion into a laundry room with storage solutions.", tag: "Laundry" }
-    ];
+  { src: "photos/2nd floor kitchen progress 3.jpg", caption: "2nd floor kitchen progress 3", tag: "Project" },
+  { src: "photos/3rd floor after 1.jpg", caption: "3rd floor after 1", tag: "Project" },
+  { src: "photos/3rd floor after 2.jpg", caption: "3rd floor after 2", tag: "Project" },
+  { src: "photos/3rd floor after 3.jpg", caption: "3rd floor after 3", tag: "Project" },
+  { src: "photos/3rd floor before 1.jpg", caption: "3rd floor before 1", tag: "Project" },
+  { src: "photos/3rd floor before 2.jpg", caption: "3rd floor before 2", tag: "Project" },
+  { src: "photos/3rd floor progress 1.jpg", caption: "3rd floor progress 1", tag: "Project" },
+  { src: "photos/3rd floor progress 2.jpg", caption: "3rd floor progress 2", tag: "Project" },
+  { src: "photos/3rd floor progress 3.jpg", caption: "3rd floor progress 3", tag: "Project" },
+  { src: "photos/3rd floor progress 4.jpg", caption: "3rd floor progress 4", tag: "Project" },
+  { src: "photos/3rd floor progress 5.jpg", caption: "3rd floor progress 5", tag: "Project" },
+  { src: "photos/3rd floor progress 6.jpg", caption: "3rd floor progress 6", tag: "Project" },
+  { src: "photos/3rd floor progress 7.jpg", caption: "3rd floor progress 7", tag: "Project" },
+  { src: "photos/3rd floor progress 8.jpg", caption: "3rd floor progress 8", tag: "Project" },
+  { src: "photos/aquarium after 1.jpg", caption: "aquarium after 1", tag: "Project" },
+  { src: "photos/aquarium after 2.jpg", caption: "aquarium after 2", tag: "Project" },
+  { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "Project" },
+  { src: "photos/barbershop after 1.jpg", caption: "barbershop after 1", tag: "Project" },
+  { src: "photos/barbershop before 1.jpg", caption: "barbershop before 1", tag: "Project" },
+  { src: "photos/barbershop progress 1.jpg", caption: "barbershop progress 1", tag: "Project" },
+  { src: "photos/basement progress 2.jpg", caption: "basement progress 2", tag: "Project" },
+  { src: "photos/basement progress 3.jpg", caption: "basement progress 3", tag: "Project" },
+  { src: "photos/basement progress.jpg", caption: "basement progress", tag: "Project" },
+  { src: "photos/bathroom 1 after 1.jpg", caption: "bathroom 1 after 1", tag: "Project" },
+  { src: "photos/bathroom 1 after 2.jpg", caption: "bathroom 1 after 2", tag: "Project" },
+  { src: "photos/bathroom 1 progress 1.jpg", caption: "bathroom 1 progress 1", tag: "Project" },
+  { src: "photos/bathroom 1 progress 2.jpg", caption: "bathroom 1 progress 2", tag: "Project" },
+  { src: "photos/bathroom 2 after 1.jpg", caption: "bathroom 2 after 1", tag: "Project" },
+  { src: "photos/bathroom 2 before 1.jpg", caption: "bathroom 2 before 1", tag: "Project" },
+  { src: "photos/classroom before 1.jpg", caption: "classroom before 1", tag: "Project" },
+  { src: "photos/classroom before 2.jpg", caption: "classroom before 2", tag: "Project" },
+  { src: "photos/deck before 1.jpg", caption: "deck before 1", tag: "Project" },
+  { src: "photos/deck progress 1.jpg", caption: "deck progress 1", tag: "Project" },
+  { src: "photos/deck progress 2.jpg", caption: "deck progress 2", tag: "Project" },
+  { src: "photos/deck progress 3.jpg", caption: "deck progress 3", tag: "Project" },
+  { src: "photos/den before 1.jpg", caption: "den before 1", tag: "Project" },
+  { src: "photos/denprogress.jpg", caption: "denprogress", tag: "Project" },
+  { src: "photos/garage after 1.jpg", caption: "garage after 1", tag: "Project" },
+  { src: "photos/garage before 1.jpg", caption: "garage before 1", tag: "Project" },
+  { src: "photos/IMG_0824.jpg", caption: "IMG_0824", tag: "Project" },
+  { src: "photos/kitchen 1 after 1.jpg", caption: "kitchen 1 after 1", tag: "Project" },
+  { src: "photos/kitchen 1 after 2.jpg", caption: "kitchen 1 after 2", tag: "Project" },
+  { src: "photos/kitchen 1 after 3.jpg", caption: "kitchen 1 after 3", tag: "Project" },
+  { src: "photos/kitchen 1 after 4.jpg", caption: "kitchen 1 after 4", tag: "Project" },
+  { src: "photos/kitchen 1 before 2.jpg", caption: "kitchen 1 before 2", tag: "Project" },
+  { src: "photos/kitchen 1 before.jpg", caption: "kitchen 1 before", tag: "Project" },
+  { src: "photos/kitchen 1 progress 1.jpg", caption: "kitchen 1 progress 1", tag: "Project" },
+  { src: "photos/kitchen 1 progress 2.jpg", caption: "kitchen 1 progress 2", tag: "Project" },
+  { src: "photos/kitchen 1 progress 3.jpg", caption: "kitchen 1 progress 3", tag: "Project" },
+  { src: "photos/kitchen 1 progress.jpg", caption: "kitchen 1 progress", tag: "Project" },
+  { src: "photos/living room 1 after.jpg", caption: "living room 1 after", tag: "Project" },
+  { src: "photos/living room 1 progress.jpg", caption: "living room 1 progress", tag: "Project" },
+  { src: "photos/living room progress 1.jpg", caption: "living room progress 1", tag: "Project" },
+  { src: "photos/PHOTO-2025-07-11-21-59-38.jpg", caption: "PHOTO-2025-07-11-21-59-38", tag: "Project" },
+  { src: "photos/PHOTO-2025-07-11-22-07-29.jpg", caption: "PHOTO-2025-07-11-22-07-29", tag: "Project" },
+  { src: "photos/rec room after 1.jpg", caption: "rec room after 1", tag: "Project" },
+  { src: "photos/rec room after 2.jpg", caption: "rec room after 2", tag: "Project" },
+  { src: "photos/rec room before.jpg", caption: "rec room before", tag: "Project" },
+  { src: "photos/rec room progress 1.jpg", caption: "rec room progress 1", tag: "Project" },
+  { src: "photos/rec room progress 2.jpg", caption: "rec room progress 2", tag: "Project" },
+  { src: "photos/siding after 1.jpg", caption: "siding after 1", tag: "Project" },
+  { src: "photos/siding after 2.jpg", caption: "siding after 2", tag: "Project" },
+  { src: "photos/siding before 1.jpg", caption: "siding before 1", tag: "Project" },
+  { src: "photos/siding before 2.jpg", caption: "siding before 2", tag: "Project" },
+  { src: "photos/siding progress 1.jpg", caption: "siding progress 1", tag: "Project" },
+  { src: "photos/siding progress 2.jpg", caption: "siding progress 2", tag: "Project" },
+  { src: "photos/stair demo before 1.jpg", caption: "stair demo before 1", tag: "Project" },
+  { src: "photos/water heater after 1.jpg", caption: "water heater after 1", tag: "Project" },
+  { src: "photos/water heater before 1.jpg", caption: "water heater before 1", tag: "Project" },
+  { src: "photos/2nd floor kitchen after 1.jpg", caption: "2nd floor kitchen after 1", tag: "Project" },
+  { src: "photos/2nd floor kitchen after 2.jpg", caption: "2nd floor kitchen after 2", tag: "Project" },
+  { src: "photos/2nd floor kitchen after 3.jpg", caption: "2nd floor kitchen after 3", tag: "Project" },
+  { src: "photos/2nd floor kitchen before 1.jpg", caption: "2nd floor kitchen before 1", tag: "Project" },
+  { src: "photos/2nd floor kitchen before 2.jpg", caption: "2nd floor kitchen before 2", tag: "Project" }
+];
+
     const heroImg = document.getElementById('heroImg');
     const heroCaption = document.getElementById('heroCaption');
     const grid = document.getElementById('grid');
