--- a/index.html
+++ b/index.html
@@ -14,49 +14,123 @@
       --tile-border:#222;
     }
     *{ box-sizing:border-box; }
-    html, body{ margin:0; padding:0; background:var(--bg); color:var(--text);
-      font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-    .wrap{ max-width:1200px; margin:0 auto; padding:20px 16px 48px; }
-    header{ display:flex; align-items:center; gap:10px; padding:6px 0 16px; }
+    html, body{
+      margin:0; padding:0; background:var(--bg); color:var(--text);
+      font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      height:100%;
+    }
+
+    /* Layout: sticky top area + scrolling thumbs */
+    .page{
+      display:flex; flex-direction:column; min-height:100vh;
+    }
+    .sticky-top{
+      position: sticky; top:0; z-index: 10;
+      background:var(--bg);
+      padding:16px 16px 10px;
+      border-bottom:1px solid #1a1a1a;
+    }
+    header{
+      display:flex; align-items:center; gap:10px; padding-bottom:10px;
+    }
     .dot{ width:10px; height:10px; border-radius:999px; background:var(--accent);
           box-shadow:0 0 0 4px rgba(227,114,54,0.18); }
-    h1{ margin:0; font-size:24px; letter-spacing:.3px; }
-    .hero{ width:100%; background:#0d0d0d; border:1px solid #1c1c1c; border-radius:12px; overflow:hidden;
-      box-shadow:0 10px 28px rgba(0,0,0,0.35); }
-    .hero img{ display:block; width:100%; height:auto; object-fit:cover; max-height:70vh; }
-    .caption{ color:var(--muted); font-size:15px; line-height:1.5; padding:10px 6px 0; }
-    .caption .label{ color:var(--accent); font-weight:700; margin-right:6px; }
-    .grid{ margin-top:18px; display:grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap:12px; }
-    .tile{ background:var(--tile); border:1px solid var(--tile-border); border-radius:10px; overflow:hidden;
-      cursor:pointer; position:relative; transition:transform .15s ease, border-color .15s ease; }
+    h1{ margin:0; font-size:22px; letter-spacing:.3px; }
+
+    .hero{
+      position:relative; width:100%; max-width:1200px; margin:0 auto;
+      background:#0d0d0d; border:1px solid #1c1c1c; border-radius:12px; overflow:hidden;
+      box-shadow:0 8px 24px rgba(0,0,0,0.35);
+    }
+    .hero img{
+      display:block; width:100%; height:auto; object-fit:cover; max-height:64vh;
+    }
+
+    /* Arrows */
+    .nav-btn{
+      position:absolute; top:50%; transform:translateY(-50%);
+      background:rgba(0,0,0,0.55); color:#fff; border:1px solid #444;
+      width:44px; height:44px; border-radius:999px; cursor:pointer; font-size:18px; font-weight:700;
+      display:flex; align-items:center; justify-content:center;
+      backdrop-filter: blur(2px);
+    }
+    .nav-btn:hover{ background:rgba(0,0,0,0.7); }
+    .nav-left{ left:10px; }
+    .nav-right{ right:10px; }
+
+    .caption-wrap{
+      max-width:1200px; margin:8px auto 0; padding:0 4px 4px;
+      color:var(--muted); font-size:15px; line-height:1.5;
+    }
+    .caption-wrap .label{ color:var(--accent); font-weight:700; margin-right:6px; }
+
+    /* Scrollable grid area */
+    .thumbs-section{
+      flex:1 1 auto; /* take remaining height */
+      overflow:auto; /* this scrolls */
+      padding:16px;
+    }
+    .grid{
+      max-width:1200px; margin:0 auto;
+      display:grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap:12px;
+    }
+    .tile{
+      background:var(--tile); border:1px solid var(--tile-border); border-radius:10px; overflow:hidden;
+      cursor:pointer; position:relative; transition:transform .15s ease, border-color .15s ease, outline-color .15s ease;
+    }
     .tile:hover{ transform:translateY(-2px); border-color:#2a2a2a; }
-    .tile img{ width:100%; height:120px; object-fit:cover; display:block; }
-    .tile .tag{ position:absolute; bottom:8px; left:8px; background:rgba(0,0,0,0.55); color:#fff;
-      border:1px solid rgba(255,255,255,0.2); border-radius:999px; font-size:12px; padding:2px 8px; }
     .tile.active{ outline:2px solid var(--accent); outline-offset:2px; }
-    footer{ color:#8d8d8d; text-align:center; font-size:12px; padding:20px 0; }
-    @media (max-width:640px){ h1{ font-size:20px; } .tile img{ height:110px; } }
+    .tile img{ width:100%; height:120px; object-fit:cover; display:block; }
+    .tile .tag{
+      position:absolute; bottom:8px; left:8px; background:rgba(0,0,0,0.55); color:#fff;
+      border:1px solid rgba(255,255,255,0.2); border-radius:999px; font-size:12px; padding:2px 8px;
+    }
+
+    footer{ color:#8d8d8d; text-align:center; font-size:12px; padding:14px 0; border-top:1px solid #1f1f1f; }
+
+    @media (max-width:640px){
+      h1{ font-size:18px; }
+      .tile img{ height:110px; }
+      .nav-btn{ width:40px; height:40px; font-size:16px; }
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="dot"></div>
-      <h1>Ambidextrous Workers — Project Showcase</h1>
-    </header>
-    <figure class="hero" id="hero">
-      <img id="heroImg" src="" alt="Main project photo">
-    </figure>
-    <div class="caption" id="heroCaption">
-      <span class="label">Caption:</span> Loading...
+  <div class="page">
+    <!-- Sticky top: header + main image + caption -->
+    <div class="sticky-top">
+      <header>
+        <div class="dot"></div>
+        <h1>Ambidextrous Workers — Project Showcase</h1>
+      </header>
+
+      <figure class="hero" id="hero">
+        <button class="nav-btn nav-left" id="prevBtn" aria-label="Previous photo">‹</button>
+        <img id="heroImg" src="" alt="Main project photo">
+        <button class="nav-btn nav-right" id="nextBtn" aria-label="Next photo">›</button>
+      </figure>
+
+      <div class="caption-wrap" id="heroCaption">
+        <span class="label">Caption:</span> Loading...
+      </div>
     </div>
-    <section class="grid" id="grid"></section>
-    <footer>
-      © <span id="year"></span> Ambidextrous Workers — Licensed & Insured in Suffolk County, NY
-    </footer>
+
+    <!-- Scrollable thumbnails -->
+    <section class="thumbs-section">
+      <div class="grid" id="grid"></div>
+      <footer>
+        © <span id="year"></span> Ambidextrous Workers — Licensed & Insured in Suffolk County, NY
+      </footer>
+    </section>
   </div>
+
   <script>
-    const PHOTOS = [
+    /* ===== Paste your full PHOTOS array below (the one I generated from your filenames) =====
+       Example line format:
+       { src: "photos/2nd floor kitchen progress 3.jpg", caption: "2nd floor kitchen progress 3", tag: "Project" },
+    */
+    
+ const PHOTOS = [
   { src: "photos/2nd floor kitchen progress 3.jpg", caption: "2nd floor kitchen progress 3", tag: "Project" },
   { src: "photos/3rd floor after 1.jpg", caption: "3rd floor after 1", tag: "Project" },
   { src: "photos/3rd floor after 2.jpg", caption: "3rd floor after 2", tag: "Project" },
@@ -133,17 +207,30 @@
   { src: "photos/2nd floor kitchen before 2.jpg", caption: "2nd floor kitchen before 2", tag: "Project" }
 ];
 
+    /* ====================================================================================== */
+
     const heroImg = document.getElementById('heroImg');
     const heroCaption = document.getElementById('heroCaption');
     const grid = document.getElementById('grid');
     const yearEl = document.getElementById('year');
+    const prevBtn = document.getElementById('prevBtn');
+    const nextBtn = document.getElementById('nextBtn');
+
+    let currentIndex = 0;
+
     function setHero(index){
-      const item = PHOTOS[index];
+      if (!PHOTOS.length) return;
+      currentIndex = (index + PHOTOS.length) % PHOTOS.length;
+      const item = PHOTOS[currentIndex];
       heroImg.src = item.src;
       heroImg.alt = item.caption || 'Project photo';
       heroCaption.innerHTML = '<span class="label">Caption:</span> ' + (item.caption || '');
-      document.querySelectorAll('.tile').forEach((t,i)=>{ t.classList.toggle('active', i===index); });
+      document.querySelectorAll('.tile').forEach((t,i)=> t.classList.toggle('active', i===currentIndex));
     }
+
+    function prevPhoto(){ setHero(currentIndex - 1); }
+    function nextPhoto(){ setHero(currentIndex + 1); }
+
     function buildGrid(){
       grid.innerHTML = '';
       PHOTOS.forEach((p, idx)=>{
@@ -160,6 +247,16 @@
         grid.appendChild(tile);
       });
     }
+
+    // Wire up controls
+    prevBtn.addEventListener('click', prevPhoto);
+    nextBtn.addEventListener('click', nextPhoto);
+    window.addEventListener('keydown', (e)=>{
+      if (e.key === 'ArrowLeft') prevPhoto();
+      if (e.key === 'ArrowRight') nextPhoto();
+    });
+
+    // Init
     buildGrid();
     setHero(0);
     yearEl.textContent = new Date().getFullYear();
