--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     header{
       display:flex; align-items:center; gap:10px; padding-bottom:10px;
     }
-    .dot{ width:10px; height:10px; border-radius:999px; background:var(--accent);
-          box-shadow:0 0 0 4px rgba(227,114,54,0.18); }
+    /*.dot{ width:10px; height:10px; border-radius:999px; background:var(--accent);
+          box-shadow:0 0 0 4px rgba(227,114,54,0.18); }** */
     h1{ margin:0; font-size:22px; letter-spacing:.3px; text-align:center; width:100%; }
 
     .hero{
