--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     */
     
  const PHOTOS = [
-  { src: "photos/2nd floor kitchen progress 3.jpg", caption: "2nd floor kitchen progress 3", tag: "Project" },
+  { src: "photos/2nd floor kitchen progress 3.jpg", caption: "Custom kitchen remodel with re-designed layout, corrective wall build, and installation of new cabinets, countertops, and appliances.", tag: "Kitchen" },
   { src: "photos/3rd floor after 1.jpg", caption: "3rd floor after 1", tag: "Project" },
   { src: "photos/3rd floor after 2.jpg", caption: "3rd floor after 2", tag: "Project" },
   { src: "photos/3rd floor after 3.jpg", caption: "3rd floor after 3", tag: "Project" },
