--- a/index.html
+++ b/index.html
@@ -131,26 +131,34 @@
     */
     
  const PHOTOS = [
-  { src: "photos/2nd floor kitchen progress 3.jpg", caption: "Custom kitchen remodel with re-designed layout, corrective wall build, and installation of new cabinets, countertops, and appliances.", tag: "Kitchen" },
-  { src: "photos/3rd floor after 1.jpg", caption: "3rd floor after 1", tag: "Project" },
-  { src: "photos/3rd floor after 2.jpg", caption: "3rd floor after 2", tag: "Project" },
+
+  { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "" },
+   
+   { src: "photos/2nd floor kitchen progress 3.jpg", caption: "Custom kitchen remodel with re-designed layout, corrective wall build, and installation of new cabinets, countertops, and appliances.", tag: "Kitchen" },
+ { src: "photos/3rd floor before 1.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit door installation.”, tag: "Gut Renovation" },
+  { src: "photos/3rd floor progress 3.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit door installation.”, tag: "Gut Renovation" },
+  { src: "photos/3rd floor progress 4.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit door installation.”, tag: "Gut Renovation" },
+  { src: "photos/3rd floor progress 5.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit doors.”, tag: "Gut Renovation" },
+  { src: "photos/3rd floor progress 7.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit doors.”, tag: "Gut Renovation" }, 
+  { src: "photos/3rd floor after 1.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit doors.”, tag: "Gut Renovation" },
+  /*{ src: "photos/3rd floor after 2.jpg", caption: "3rd floor after 2", tag: "Project" },
   { src: "photos/3rd floor after 3.jpg", caption: "3rd floor after 3", tag: "Project" },
-  { src: "photos/3rd floor before 1.jpg", caption: "3rd floor before 1", tag: "Project" },
+ 
   { src: "photos/3rd floor before 2.jpg", caption: "3rd floor before 2", tag: "Project" },
   { src: "photos/3rd floor progress 1.jpg", caption: "3rd floor progress 1", tag: "Project" },
   { src: "photos/3rd floor progress 2.jpg", caption: "3rd floor progress 2", tag: "Project" },
-  { src: "photos/3rd floor progress 3.jpg", caption: "3rd floor progress 3", tag: "Project" },
-  { src: "photos/3rd floor progress 4.jpg", caption: "3rd floor progress 4", tag: "Project" },
-  { src: "photos/3rd floor progress 5.jpg", caption: "3rd floor progress 5", tag: "Project" },
-  { src: "photos/3rd floor progress 6.jpg", caption: "3rd floor progress 6", tag: "Project" },
-  { src: "photos/3rd floor progress 7.jpg", caption: "3rd floor progress 7", tag: "Project" },
-  { src: "photos/3rd floor progress 8.jpg", caption: "3rd floor progress 8", tag: "Project" },
-  { src: "photos/aquarium after 1.jpg", caption: "aquarium after 1", tag: "Project" },
-  { src: "photos/aquarium after 2.jpg", caption: "aquarium after 2", tag: "Project" },
-  { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "Project" },
-  { src: "photos/barbershop after 1.jpg", caption: "barbershop after 1", tag: "Project" },
-  { src: "photos/barbershop before 1.jpg", caption: "barbershop before 1", tag: "Project" },
-  { src: "photos/barbershop progress 1.jpg", caption: "barbershop progress 1", tag: "Project" },
+  { src: "photos/3rd floor progress 6.jpg", caption: "3rd floor progress 6", tag: "Project" }, 
+  { src: "photos/3rd floor progress 8.jpg", caption: "3rd floor progress 8", tag: "Project" },*/
+   
+  { src: "photos/aquarium after 1.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
+  { src: "photos/aquarium after 2.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
+
+   
+  
+  { src: "photos/barbershop before 1.jpg", caption: “Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.”, tag: "Commerical Shop" },
+  { src: "photos/barbershop progress 1.jpg", caption: “Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.”, tag: "Commercial Shop" },
+  { src: "photos/barbershop after 1.jpg", caption: “Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.”, tag: "Commercial Shop" },
+   
   { src: "photos/basement progress 2.jpg", caption: "basement progress 2", tag: "Project" },
   { src: "photos/basement progress 3.jpg", caption: "basement progress 3", tag: "Project" },
   { src: "photos/basement progress.jpg", caption: "basement progress", tag: "Project" },
