--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
 
   { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "" },
    
+/* MAIN KITCHEN */
+{ src: "photos/kitchen_main.jpg", caption: "Custom kitchen installation with redesigned layout, full appliance suite, granite countertops, and upgraded plumbing and electrical feeds., tag: "New Kitchen" },
+{ src: "photos/main kitchen before.jpg", caption: "Custom kitchen installation with redesigned layout, full appliance suite, granite countertops, and upgraded plumbing and electrical feeds., tag: "New Kitchen" },
+   
+   /* 2nd FLOOR KITCHEN */
+   
    { src: "photos/2nd floor kitchen progress 3.jpg", caption: "Custom kitchen remodel with re-designed layout, corrective wall build, and installation of new cabinets, countertops, and appliances.", tag: "Kitchen" },
  { src: "photos/3rd floor before 1.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit door installation.”, tag: "Gut Renovation" },
   { src: "photos/3rd floor progress 3.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit door installation.”, tag: "Gut Renovation" },
@@ -143,8 +149,8 @@
   { src: "photos/3rd floor after 1.jpg", caption: “Full gut renovation of a 3rd-floor residence, including new subfloor, insulation, sheetrock, electrical, windows, framing, and a custom-fit doors.”, tag: "Gut Renovation" },
  
    
-  { src: "photos/aquarium after 1.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
-  { src: "photos/aquarium after 2.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
+  
+  
 
    
   /* BARBERSHOP */
@@ -192,40 +198,19 @@
 { src: "photos/kitchen 1 after 3.jpg", caption: “Complete kitchen rebuild with new subfloor to correct uneven flooring and custom elevations designed to meet client needs.”, tag: "Custom Kitchen" },
 { src: "photos/kitchen 1 after 2.jpg", caption: “Complete kitchen rebuild with new subfloor to correct uneven flooring and custom elevations designed to meet client needs.”, tag: "Custom Kitchen" },
 
+/* LIVING ROOM */
+{ src: "photos/living room 1 progress.jpg", caption: “Living room expansion by removing existing staircase and wall, featuring a custom built-in aquarium centerpiece.”, tag: "Living Room" },    
+{ src: "photos/living room progress 1.jpg", caption: "Living room expansion by removing existing staircase and wall, featuring a custom built-in aquarium centerpiece.", tag: "Living Room" },
+{ src: "photos/living room 1 after.jpg", caption: "Living room expansion by removing existing staircase and wall, featuring a custom built-in aquarium centerpiece.", tag: "Living Room" },
+{ src: "photos/aquarium after 2.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
+
+
+  
+ /* HOT WATER HEATER */
+  { src: "photos/water heater after 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" },
+  { src: "photos/water heater before 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" }
+
     
-  /*{ src: "photos/garage after 1.jpg", caption: "garage after 1", tag: "Project" },
-  { src: "photos/garage before 1.jpg", caption: "garage before 1", tag: "Project" },*/
-  
-  { src: "photos/kitchen 1 after 1.jpg", caption: "kitchen 1 after 1", tag: "Project" },
- 
-  
-  { src: "photos/kitchen 1 after 4.jpg", caption: "kitchen 1 after 4", tag: "Project" },
-  { src: "photos/kitchen 1 before 2.jpg", caption: "kitchen 1 before 2", tag: "Project" },
-  { src: "photos/kitchen 1 before.jpg", caption: "kitchen 1 before", tag: "Project" },
-
-  
-
- 
-  { src: "photos/living room 1 after.jpg", caption: "living room 1 after", tag: "Project" },
-  { src: "photos/living room 1 progress.jpg", caption: "living room 1 progress", tag: "Project" },
-  { src: "photos/living room progress 1.jpg", caption: "living room progress 1", tag: "Project" },
-  { src: "photos/PHOTO-2025-07-11-21-59-38.jpg", caption: "PHOTO-2025-07-11-21-59-38", tag: "Project" },
-  { src: "photos/PHOTO-2025-07-11-22-07-29.jpg", caption: "PHOTO-2025-07-11-22-07-29", tag: "Project" },
-
-  { src: "photos/siding after 1.jpg", caption: "siding after 1", tag: "Project" },
-  { src: "photos/siding after 2.jpg", caption: "siding after 2", tag: "Project" },
-  { src: "photos/siding before 1.jpg", caption: "siding before 1", tag: "Project" },
-  { src: "photos/siding before 2.jpg", caption: "siding before 2", tag: "Project" },
-  { src: "photos/siding progress 1.jpg", caption: "siding progress 1", tag: "Project" },
-  { src: "photos/siding progress 2.jpg", caption: "siding progress 2", tag: "Project" },
-  { src: "photos/stair demo before 1.jpg", caption: "stair demo before 1", tag: "Project" },
-  { src: "photos/water heater after 1.jpg", caption: "water heater after 1", tag: "Project" },
-  { src: "photos/water heater before 1.jpg", caption: "water heater before 1", tag: "Project" },
-  { src: "photos/2nd floor kitchen after 1.jpg", caption: "2nd floor kitchen after 1", tag: "Project" },
-  { src: "photos/2nd floor kitchen after 2.jpg", caption: "2nd floor kitchen after 2", tag: "Project" },
-  { src: "photos/2nd floor kitchen after 3.jpg", caption: "2nd floor kitchen after 3", tag: "Project" },
-  { src: "photos/2nd floor kitchen before 1.jpg", caption: "2nd floor kitchen before 1", tag: "Project" },
-  { src: "photos/2nd floor kitchen before 2.jpg", caption: "2nd floor kitchen before 2", tag: "Project" }
 ];
   /*{ src: "photos/basement progress 2.jpg", caption: "basement progress 2", tag: "Project" },
   { src: "photos/basement progress 3.jpg", caption: "basement progress 3", tag: "Project" },
@@ -245,6 +230,30 @@
   { src: "photos/3rd floor progress 2.jpg", caption: "3rd floor progress 2", tag: "Project" },
   { src: "photos/3rd floor progress 6.jpg", caption: "3rd floor progress 6", tag: "Project" }, 
   { src: "photos/3rd floor progress 8.jpg", caption: "3rd floor progress 8", tag: "Project" },*/
+     /*{ src: "photos/garage after 1.jpg", caption: "garage after 1", tag: "Project" },
+  { src: "photos/garage before 1.jpg", caption: "garage before 1", tag: "Project" },
+    { src: "photos/kitchen 1 after 1.jpg", caption: "kitchen 1 after 1", tag: "Project" },  
+  { src: "photos/kitchen 1 after 4.jpg", caption: "kitchen 1 after 4", tag: "Project" },
+  { src: "photos/kitchen 1 before 2.jpg", caption: "kitchen 1 before 2", tag: "Project" },
+  { src: "photos/kitchen 1 before.jpg", caption: "kitchen 1 before", tag: "Project" }, 
+  { src: "photos/PHOTO-2025-07-11-21-59-38.jpg", caption: "PHOTO-2025-07-11-21-59-38", tag: "Project" },
+  { src: "photos/PHOTO-2025-07-11-22-07-29.jpg", caption: "PHOTO-2025-07-11-22-07-29", tag: "Project" },
+{ src: "photos/aquarium after 1.jpg", caption: "Custom In Wall Aquarium", tag: "Custom Design" },
+ { src: "photos/siding after 1.jpg", caption: "siding after 1", tag: "Project" },
+  { src: "photos/siding after 2.jpg", caption: "siding after 2", tag: "Project" },
+  { src: "photos/siding before 1.jpg", caption: "siding before 1", tag: "Project" },
+  { src: "photos/siding before 2.jpg", caption: "siding before 2", tag: "Project" },
+  { src: "photos/siding progress 1.jpg", caption: "siding progress 1", tag: "Project" },
+  { src: "photos/siding progress 2.jpg", caption: "siding progress 2", tag: "Project" },
+  { src: "photos/stair demo before 1.jpg", caption: "stair demo before 1", tag: "Project" },
+    { src: "photos/2nd floor kitchen after 1.jpg", caption: "2nd floor kitchen after 1", tag: "Project" },
+  { src: "photos/2nd floor kitchen after 2.jpg", caption: "2nd floor kitchen after 2", tag: "Project" },
+  { src: "photos/2nd floor kitchen after 3.jpg", caption: "2nd floor kitchen after 3", tag: "Project" },
+  { src: "photos/2nd floor kitchen before 1.jpg", caption: "2nd floor kitchen before 1", tag: "Project" },
+  { src: "photos/2nd floor kitchen before 2.jpg", caption: "2nd floor kitchen before 2", tag: "Project" }
+  
+  */
+    
     /* ====================================================================================== */
 
     const heroImg = document.getElementById('heroImg');
