--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
   { src: "photos/water heater after 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" },
   { src: "photos/water heater before 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" }
 
+ /* Custom Railing*/
+  { src: "photos/railing after 1.jpg", caption: “Removal of existing railing and installation of a custom-fabricated design, upgraded for safety and style in compliance with current building codes.”, tag: "Custom Millwork" },
+  { src: "photos/railing after 2.jpg", caption: “Removal of existing railing and installation of a custom-fabricated design, upgraded for safety and style in compliance with current building codes.”, tag: "Custom Millwork" }
+
     
 ];
   /*{ src: "photos/basement progress 2.jpg", caption: "basement progress 2", tag: "Project" },
