--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
  const PHOTOS = [
 
-  { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "" },
+  { src: "photos/AW MAIN PORTFOLIO.jpg", caption: "AW MAIN PORTFOLIO", tag: "Logo" },
    
 /* MAIN KITCHEN */
 { src: "photos/kitchen_main.jpg", caption: "Custom kitchen installation with redesigned layout, full appliance suite, granite countertops, and upgraded plumbing and electrical feeds., tag: "New Kitchen" },
