--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
       display:flex; align-items:center; gap:10px; padding-bottom:10px;
     }
     /*.dot{ width:10px; height:10px; border-radius:999px; background:var(--accent);
-          box-shadow:0 0 0 4px rgba(227,114,54,0.18); }** */
+          box-shadow:0 0 0 4px rgba(227,114,54,0.18); } */
     h1{ margin:0; font-size:22px; letter-spacing:.3px; text-align:center; width:100%; }
 
     .hero{
       position:relative; width:100%; max-width:1200px; margin:0 auto;
       background:#0d0d0d; border:1px solid #1c1c1c; border-radius:12px; overflow:hidden;
       box-shadow:0 8px 24px rgba(0,0,0,0.35);
+      aspect-ratio: 16 / 9; /* new line to lock hero height */
+  
+
     }
     .hero img{
-      display:block; width:100%; height:auto; object-fit:cover; max-height:64vh;
+      display:block; width:100%; height:100%; object-fit:cover; max-height:64vh;
     }
 
     /* Arrows */
@@ -154,7 +157,7 @@
 
    
   /* BARBERSHOP */
-{ src: "photos/barbershop before 1.jpg", caption: "Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.", tag: "Commerical Shop" },
+{ src: "photos/barbershop before 1.jpg", caption: "Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.", tag: "Commercial Shop" },
 { src: "photos/barbershop progress 1.jpg", caption: "Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.", tag: "Commercial Shop" },
 { src: "photos/barbershop after 1.jpg", caption: "Commercial conversion of a former dental office into a turnkey barbershop with custom millwork stations, cabinets, and countertops.", tag: "Commercial Shop" },
    
@@ -208,7 +211,7 @@
   
  /* HOT WATER HEATER */
   { src: "photos/water heater after 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" },
-  { src: "photos/water heater before 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" }
+  { src: "photos/water heater before 1.jpg", caption: "Conversion of a conventional gas water heater to a modern tankless system for efficient, on-demand hot water.", tag: "Water Heater" },
 
  /* Custom Railing*/
   { src: "photos/railing after 1.jpg", caption: "Removal of existing railing and installation of a custom-fabricated design, upgraded for safety and style in compliance with current building codes.", tag: "Custom Millwork" },
