--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
       box-shadow:0 8px 24px rgba(0,0,0,0.35);
       aspect-ratio: 16 / 9;
     }
-    .hero img{ width:100%; height:100%; object-fit:cover; display:block; }
+    .hero img{ width:100%; height:100%; object-fit:contain; background-color:#000; display:block; }
 
     .nav-btn{
       position:absolute; top:50%; transform:translateY(-50%);
